--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,9 @@ ul, li {
      color: #2e2f42;
    }
    .ul-header-menu {
-     display: none;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
    }
    .address-main {
      margin-left: auto;
@@ -99,67 +101,7 @@ ul, li {
    border: none;
    }
 
-   @media screen and (min-width:768px) {
-   
-     .open-menu-btn {
-     display: none;
-     }
-     .logo {
-     margin-right: 120px;
-     }
-      .nav-tittle {
-     display: flex;
-     gap: 40px;
-     }
-     .li-studio {
-     color: #2e2f42;
-     font-size: 16px;
-     font-weight: 500;
-     line-height: 1.5;
-     letter-spacing: 0.02em;
-     padding: 24px 0;
-     display: block;
-     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   }
-   .li-studio:hover,
-   .li-studio:focus {
-     color: #404bbf;
-   }
-   .current {
-     position: relative;
-     color: #404bbf;
-   }
-   .current::after {
-     content: "";
-     position: absolute;
-     left: 0;
-     bottom: -1px;
-     background-color: #404bbf;
-     border-radius: 2px;
-     height: 4px;
-     width: 100%;
-   }
-    .address-main { 
-      display: block;
-     }
-     .address-list {
-     display: flex;
-     flex-direction: column;
-     gap: 12px;
-     }
-     .address-link {
-     color: #434455;
-     font-size: 12px;
-     line-height: 1.16;
-     letter-spacing: 0.02em;
-     transition: color cubic-bezier(0.4, 0, 0.2, 1);
-   }
-   
-   .address-link:hover,
-   .address-link:focus {
-     color: #404bbf;
-    }
-}
+
 
    @media screen and (min-width: 1158px) {
    .logo {
@@ -337,6 +279,7 @@ ul, li {
 }
 
 .h-main-two {
+  color: #2E2F42;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -379,6 +322,7 @@ ul, li {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-bottom: 8px;
 }
 
 .social-links-autor{
@@ -431,4 +375,484 @@ ul, li {
   font-weight: 500;
   color: #8E8F99;
   padding-bottom: 120px; 
+}
+
+.ul-section-portfolio {
+  color: #2e2f42;
+}
+
+.li-portfolio {
+  margin-bottom: 48px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.li-portfolio:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* синій текст замість картинки в 4 секції */
+.portfolio-cover-wrap{
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-text-wrap {
+  position: absolute;
+  top: 0;
+  background-color: #4d5ae5;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-cover-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+}
+
+.li-portfolio:hover .portfolio-text-wrap{
+  transform: translateY(0%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-content {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  box-shadow: none;
+}
+
+.portfolio-content:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.h-for-prtfolio {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
+.p-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transform: none;
+}
+
+.p-text:hover {
+  transform:  translateY(0%);
+}
+
+/* Футер */
+
+.footer-section {
+  color: #8e8f99;
+  background-color:#2E2F42;
+  padding: 96px 0;
+}
+
+.footer-info{
+  text-align: center;
+}
+
+.footer-logo {
+  width: 264px;
+}
+
+.footer-text {
+  color: #F4F4FD;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;  
+  max-width: 288px;
+  margin-top: 17.5px;
+  margin-bottom: 72px;
+  text-align: start;
+}
+
+.footer-media {
+  color: #FFF;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.logo-studio-fooler {
+  color: #f4f4fd;
+  display: inline-block;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.social-footer-li{
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-panel{
+  display: flex;
+  gap: 16px;
+  background-repeat: no-repeat;
+  background-color: none;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 72px;
+}
+
+.li-footer{
+  width: 40px;
+  height: 40px;
+  border-radius:50%;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.background-sn-footer{
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.background-sn-footer:hover,
+.background-sn-footer:focus {
+background-color: #31d0aa;
+}
+
+.social-link-footer {
+  width: 100%;
+  height: 100%;
+  border-radius:50%;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.subscribe {
+  padding-left: 94px;
+  color: var(--primary-white-color);
+  text-transform: uppercase;
+}
+
+.icon-send {
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.button-subscribe {
+  display: inline-flex;
+  border-radius: 4px;
+  padding: 8px 24px;
+  align-self: center;
+  justify-content: center;
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em; 
+  background: #4D5AE5;
+}
+
+.conteiner-form {
+
+}
+
+.subscribe-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
+.form-subscribe {
+  display: inline-block;
+}
+
+.input-label-subscribe{
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  border: 1px solid #ffffff;
+  opacity: 0.3;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.input-label-subscribe::placeholder {
+  color: #ffffff;
+}
+.button-subscribe {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+
+.icon-send {
+  margin-left: 16px;
+}
+
+/* Модальне вікно */
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  width: 408px;
+  min-height: 584px;
+  background-color: #FCFCFC;
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
+  0px 1px 3px 0px rgba(0, 0, 0, 0.12), 
+  0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
+}
+
+.button-close {
+  margin-left: auto;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  color: currentColor;
+  width: 24px;
+  height: 24px;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover, .button-close:focus {
+  background-color: #404BBF;
+  border: none;
+  fill: #ffffff;
+}
+
+.icon-close {
+  background-color: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.left-data {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 16px;
+  max-width: 360px;
+  color: #2E2F42;
+}
+
+.modal-label{
+  display: block; 
+  margin-bottom: 4px;
+  color: #8E8F99;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  line-height: 1.17;
+}
+
+.label-comment {
+  margin-bottom: 16px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.40);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  outline: transparent;
+  padding-left: 38px;
+}
+
+.modal-input:focus {
+  border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-icon {
+  stroke: #4D5AE5;
+  fill: #4D5AE5;
+}
+
+.modal-comment {
+  margin-bottom: 16px;
+}
+
+.modal-field {
+  margin-bottom: 8px;
+}
+
+.modal-icon {
+  stroke: #2E2F42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-wrap {
+  position: relative;
+}
+
+.modal-text {
+  color: rgba(46, 47, 66, 0.4); 
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.40);
+  background-color: transparent;
+  outline: transparent;
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text:focus {
+border-color: #4D5AE5;
+}
+
+.check-privacy {
+  margin-bottom: 24px; 
+}
+
+.privacy-label {
+  color: #8E8F99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.icon-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.privacy-label {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.check-privacy input[type="checkbox"]:not(:checked) + label .icon-span {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  fill: transparent;
+}
+
+.check-privacy input[type="checkbox"]:checked + label .icon-span {
+  border: none;
+  background-color: #404bbf;
+  fill: #F4F4FD;
+}
+ .conditions_link{
+  color: #4d5ae5;
+ }
+
+.button-sent {
+  display: block; 
+  min-width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  border: none;
+  background-color: #4D5AE5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 24px;
+}
+
+.button-sent:hover,  .button-sent:focus{
+  fill: #ffffff;
 }
