--- a/css/styles_adaptive.css
+++ b/css/styles_adaptive.css
@@ -1,28 +1,36 @@
 
-
 /** mobile All  x 320px ***/
 @media screen and (min-width: 320px) {
-    .container {
-      max-width: 320px;
-      background-color: aqua;
-    }
+  .container {
+    max-width: 320px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),  (min-resolution: 2dppx), (min-resolution: 192dpi) {
+    .overlay {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
+      rgba(46, 47, 66, 0.7)),
+      url(../images/people-office-mob.jpg),
+      url(../images/people-office-mob-2x.jpg),
+    } 
+  }
+
+  .apporoach-content {
+    margin-right: 24px;  
+    /* width: calc((100% - 56px) / 2); */
+  }
+
+    .apporoach-content:last-child {
+      margin-right: 0;
   }
 
 
-/** DESCTOP   ***/
-  @media screen and (min-width: 1158px) {
-    .container {
-      max-width: 1158px;
-      background-color:coral;
-      padding: 0 15px;
-    }
-  }
+}
+
 
 
 
 /** IPAD x 768px ***/
   @media screen and (min-width:768px) {
-   
     .container {
       max-width: 768px;
       background-color:blueviolet;
@@ -36,61 +44,140 @@
       margin-right: 120px;
     }
     
-    .nav-tittle {
+   .container-header-menu {
+      height: 72px;
       display: flex;
+      justify-content: space-between;
+    }
+
+    .section-team {
+      background-color: #F4F4FD;
+      font-weight: 500;
+      color: #8E8F99;
+      min-height:732px;
+      flex-shrink: 0;
+      padding-bottom: 120px;
+    }
+
+    .ul-section-address {
+      background-color: #FFFFFF;
+      letter-spacing: 0.02em;
+      color: #2e2f42;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
       gap: 40px;
     }
 
-    .li-studio {
-      color: #2e2f42;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      padding: 24px 0;
-      display: block;
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .li-studio:hover,
-  .li-studio:focus {
-    color: #404bbf;
-  }
-
-  .current {
-    position: relative;
-    color: #404bbf;
-  }
-
-  .current::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    height: 4px;
-    width: 100%;
-  }
-
-  .address-main { 
-     display: block;
+    .section-one {
+      padding: 112px 0; 
     }
-    .address-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    }
-    .address-link {
-    color: #434455;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .address-link:hover,
-  .address-link:focus {
-    color: #404bbf;
+
+   .h-main {
+    font-size: 56px;
+    max-width: 496px; 
    }
+  
+    .overlay {
+    max-width: 768px;
+    height: 436px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
+    rgba(46, 47, 66, 0.7)),
+    url(../images/people-office-tab.jpg);
+    }
+
+     @media screen and (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
+          .overlay {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
+            rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-tab.jpg),
+            url(../images/people-office-tab-2x.jpg),
+          } 
+     }
+
+  .ul-section-approach {
+    display: flex;
+    flex-wrap: wrap;
+    }
+
+  .tittle-list-team {
+    display: flex;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+  }
+
+  .ul-section-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px; 
+  }
+
+
+}
+
+
+
+/** DESCTOP   ***/
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    background-color:coral;
+    padding: 0 15px;
+  }
+
+  .logo {
+      margin-right: 76px;
+  }
+
+  .address-list {
+      flex-direction: row;
+      gap: 40px;
+  }
+
+  .address-link {
+     font-size: 16px;
+    line-height: 1.5;
+  }   
+
+  .section-one {
+    padding: 188px 0; 
+  }
+
+  .overlay {
+    max-width: 1440px;
+    height: 600px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
+    rgba(46, 47, 66, 0.7)),
+    url(../images/people-office.jpg);
+  }
+
+    @media screen and (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
+        .overlay {
+          background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
+          rgba(46, 47, 66, 0.7)),
+          url(../images/people-office.jpg),
+          url(../images/people-office-2x.jpg),
+        }
+    } 
+
+  .apporoach-content {
+    margin-right: 24px;  
+    width: calc((100% - 264px) / 3);
+    flex-wrap: nowrap;
+  }
+
+  .icon-apporoach {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    margin-bottom: 8px;
+  }
+
+
+
+
 }
