--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,6 @@ a {
 
 img {
   display: block;
-    /* max-width: 100%;
-    height: auto; */
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -70,15 +68,53 @@ ul, li {
   text-transform: uppercase;
   padding: 17px 0;
 }
+.li-studio {
+  display: flex;
+  align-items: center;
+  position: relative; 
+  padding: 24px 0;
+  color: #2E2F42; 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+  position: relative;
+  color: #404bbf;
+}
+
+.current::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 48px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;    
+} 
+
+.studio-link {
+  color: #2E2F42;
+}
+
+a.studio-link:hover, a.studio-link-a:active, a.studio-link-a:focus {
+  color: #404bbf;
+} 
+
+.adress-info {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:#434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .logo-studio {
   color: #2e2f42;
 }
 
 .ul-header-menu {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+display: none;
 }
 
 .address-main {
@@ -120,12 +156,6 @@ ul, li {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
 .button-close {
   position: absolute;
   top: 24px;
@@ -164,10 +194,75 @@ ul, li {
   position: fixed;
   top: 0;
   background-color: #fff;
-  width: 100%;
-  height: 100vh;
+  width: 320px;
+  height: 640px;
+  padding-top: 72px;
+  padding-left: 16px;
+  padding-right: 16px;
+  opacity: 0;
+  visibility:hidden;
+  pointer-events: none;
 }
 
+.mob-menu-list {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  margin-bottom: 168px;
+}
+
+.mob-menu-link{
+  color: #2E2F42;
+}
+
+.mob-menu-item {
+  margin-bottom: 40px;
+}
+
+.mob-address {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.mob-adress-info {
+  color: #434455;
+}
+
+.mob-address li {
+  margin-bottom: 24px;
+}
+
+.blue {
+  color: #404BBF;
+}
+
+.mob-soc-links {
+  display: flex;
+  gap: 40px;
+  background-repeat: no-repeat;
+  background-color: none;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  margin-top: 48px;
+}
+.mob-soc-item {
+  width: 40px;
+  height: 40px;
+  background-color:#4d5ae5;
+  border-radius:50%;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-soc-item:hover,.mob-soc-item:focus{
+  background-color: #404bbf; 
+}
    /* Першая секція */
 
 .section-one {
@@ -226,7 +321,7 @@ ul, li {
  /* друга секція  */
 
  .section-principles {
-  color: #8E8F99;
+  color: #2E2F42;
   padding: 96px 0;
 }
 
@@ -234,10 +329,6 @@ ul, li {
   background-color: #FFFFFF;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-
-.apporoach-content {
-  max-width: 288px;
 }
 
 .apporoach-tittle {
@@ -269,7 +360,6 @@ ul, li {
 
 .section-team {
   background-color: #F4F4FD;
-  color: #2E2F42;
   padding-bottom: 96px;
 }
 
@@ -285,6 +375,7 @@ ul, li {
 }
 
 .tittle-list-team {
+  color: #2E2F42;
   text-align: center;
   margin-bottom: 8px;
   max-width: 264px;
@@ -389,7 +480,7 @@ ul, li {
 }
 
 /* синій текст замість картинки в 4 секції */
-.portfolio-cover-wrap{
+.section-portfolio {
   position: relative;
   overflow: hidden;
 }
@@ -397,10 +488,13 @@ ul, li {
 .portfolio-text-wrap {
   position: absolute;
   top: 0;
+  left: 0;
   background-color: #4d5ae5;
   height: 100%;
+  width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
 }
 
 .portfolio-cover-text {
@@ -412,6 +506,8 @@ ul, li {
 }
 
 .li-portfolio:hover .portfolio-text-wrap{
+  opacity: 1;
+  visibility: visible;
   transform: translateY(0%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -544,7 +640,7 @@ background-color: #31d0aa;
 
 .subscribe {
   padding-left: 94px;
-  color: var(--primary-white-color);
+  color: #FFFFFF;
   text-transform: uppercase;
 }
 
@@ -557,7 +653,6 @@ background-color: #31d0aa;
   display: inline-flex;
   border-radius: 4px;
   padding: 8px 24px;
-  align-self: center;
   justify-content: center;
   color: #FFF;
   text-align: center;
@@ -566,10 +661,6 @@ background-color: #31d0aa;
   line-height: 1.5;
   letter-spacing: 0.02em; 
   background: #4D5AE5;
-}
-
-.conteiner-form {
-
 }
 
 .subscribe-text {
@@ -585,7 +676,7 @@ background-color: #31d0aa;
   display: inline-block;
 }
 
-.input-label-subscribe{
+.input-label-subscribe {
   width: 264px;
   height: 40px;
   padding-left: 16px;
@@ -608,7 +699,6 @@ background-color: #31d0aa;
   height: 40px;
   display: flex;
   justify-content: center;
-  align-items: center;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -642,15 +732,9 @@ background-color: #31d0aa;
   pointer-events: none;
 }
 
-.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
 .modal {
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   background-color: #FCFCFC;
   border-radius: 4px;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
@@ -853,4 +937,10 @@ background-color: #31d0aa;
 
 .button-sent:hover,  .button-sent:focus{
   fill: #ffffff;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
