--- a/css/styles_adaptive.css
+++ b/css/styles_adaptive.css
@@ -134,6 +134,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 24px; 
+    justify-content: center;
   }
 
   .content {
@@ -162,11 +163,7 @@
     margin-right: 120px;
   }
 
-  .conteiner-form {
-    margin-left: 80px;
-  }
-
-  .form-subscribe{
+  .form-subscribe {
     display: flex;
   }
 
@@ -187,6 +184,9 @@
     min-height: 584px;
   }
 
+    .conteiner-form {
+      margin-left: 80px;
+  }
  
 
 
@@ -207,6 +207,10 @@
     margin-bottom: 72px;
   }
 
+  .list-team:not(:nth-last-child(-n+2)) {
+    margin-bottom: 64px;
+  }
+
   .tittle-list-team {
     max-width: 100%;
     display: flex;
@@ -225,17 +229,18 @@
     margin-bottom: 0;
     }
 
-    .conteiner-form {
-      margin-left: 0;
-   }
-
     .footer-logo {
       margin-right: 24px;
       text-align: start;
     }
 
-    
+    .li-portfolio {
+      width: calc(50% - 56px);
+    }
 
+    .conteiner-form {
+      margin: 0 auto;
+  }
 
 }
 
