--- a/css/styles.css
+++ b/css/styles.css
@@ -740,7 +740,7 @@ background-color: #31d0aa;
 
 .modal {
   width: 288px;
-  min-height: 623px;
+  height: 623px;
   background-color: #FCFCFC;
   border-radius: 4px;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
