--- a/css/styles_adaptive.css
+++ b/css/styles_adaptive.css
@@ -5,7 +5,7 @@
     max-width: 320px;
   }
 
-  @media screen and (min-device-pixel-ratio: 2),  (min-resolution: 2dppx), (min-resolution: 192dpi) {
+  @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .overlay {
       background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
       rgba(46, 47, 66, 0.7)),
@@ -124,7 +124,7 @@
     url(../images/people-office-tab.jpg);
     }
 
-     @media screen and (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
+     @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
           .overlay {
             background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
             rgba(46, 47, 66, 0.7)),
@@ -319,7 +319,7 @@
     url(../images/people-office.jpg);
   }
 
-    @media screen and (min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
+    @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
         .overlay {
           background-image: linear-gradient(rgba(46, 47, 66, 0.7),   
           rgba(46, 47, 66, 0.7)),
