--- a/css/styles.css
+++ b/css/styles.css
@@ -339,9 +339,7 @@ display: none;
 }
 
 .ul-section-approach {
-  background-color: #FFFFFF;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+  display: flex;
 }
 
 .apporoach-tittle {
@@ -383,13 +381,14 @@ display: none;
 }
 
 .tittle-list-team {
-  color: #2E2F42;
   text-align: center;
-  max-width: 264px;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 72px;
 }
 
 .list-team {
+  width: 264px;
   border-radius: 0px 0px 4px 4px;
   background: #FFF;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 
@@ -410,6 +409,7 @@ display: none;
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  color: #2E2F42;
 }
 
 .p-team-text {
@@ -477,6 +477,7 @@ display: none;
 
 .ul-section-portfolio {
   color: #2e2f42;
+  display: flex;
 }
 
 .li-portfolio {
@@ -595,6 +596,7 @@ display: none;
   letter-spacing: 0.02em;  
   max-width: 288px;
   text-align: start;
+  margin-top: 17px;
 }
 
 .footer-media {
@@ -607,7 +609,6 @@ display: none;
   color: #f4f4fd;
   display: inline-block;
   text-align: center;
-  margin-bottom: 17px;
 }
 
 .social-footer-li {
