--- a/css/styles.css
+++ b/css/styles.css
@@ -480,6 +480,11 @@ display: none;
   display: flex;
 }
 
+.portfolio-img {
+  width: 288px;
+  height: 280px;
+}
+
 .li-portfolio {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -594,7 +599,6 @@ display: none;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;  
-  max-width: 288px;
   text-align: start;
   margin-top: 17px;
 }
